[package]
name = "msgnats-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitflags = "1.3.2"
bytes = "1.2.1"
env_logger = "0.9.1"
futures = { version = "0.3.24", features = ["async-await"] }
get_if_addrs = "0.5.3"
jemallocator = "0.5.0"
lazy_static = "1.4.0"
log = "0.4.17"
lru = "0.8.0"
lru-cache = "0.1.2"
rand = "0.8.5"
serde = "1.0.145"
serde_derive = "1.0.145"
serde_json = "1.0.85"
tokio = { version ="1.21.1", features = ["full"] }
tokio-util = { version ="0.7.4", features = ["full"] }

[dev-dependencies]
tokio-test = { version = "0.4.2" }
futures = { version = "0.3.24", features = ["async-await"] }